feat: Finshing Index Page

--- a/index.html
+++ b/index.html
@@ -284,13 +284,178 @@
 
             <!-- Foto Section -->
             <div class="col-md-12 mb-3 mt-4">
-                
+                <h4><i class="fas fa-images"></i> Foto Terbaru</h4>
+            </div>
+
+            <div class="col-md-6 mb-4">
+              <div class="card h-100 shadow-sm border-0 rounded-lg">
+                <div class="card-img">
+                  <img src="assets/images/post_image.png" alt="" class="w-100" style="height: 200px; object-fit: cover;border-top-left-radius: .3rem;border-top-right-radius: .3rem;">
+                </div>
+                <div class="card-body">
+                  <a href="#" class="text-dark text-decoration-none">
+                    <h6>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h6>
+                  </a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-6 mb-4">
+              <div class="card h-100 shadow-sm border-0 rounded-lg">
+                <div class="card-img">
+                  <img src="assets/images/post_image.png" alt="" class="w-100" style="height: 200px; object-fit: cover;border-top-left-radius: .3rem;border-top-right-radius: .3rem;">
+                </div>
+                <div class="card-body">
+                  <a href="#" class="text-dark text-decoration-none">
+                    <h6>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h6>
+                  </a>
+                </div>
+              </div>
             </div>
             <!-- End Foto Section -->
+
+            <!-- Video Section -->
+            <div class="col-12 mb-3 mt-4">
+              <h4><i class="fas fa-video"></i> Video Terbaru</h4>
+            </div>
+
+            <div class="col-md-6 mb-4">
+              <div class="card h-100 shadow-sm border-0 rounded-lg">
+                <div class="card-img">
+                  <img src="assets/images/post_image.png" alt="" class="w-100" style="height: 200px; object-fit: cover;border-top-left-radius: .3rem;border-top-right-radius: .3rem;">
+                </div>
+                <div class="card-body">
+                  <a href="#" class="text-dark text-decoration-none">
+                    <h6>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h6>
+                  </a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-6 mb-4">
+              <div class="card h-100 shadow-sm border-0 rounded-lg">
+                <div class="card-img">
+                  <img src="assets/images/post_image.png" alt="" class="w-100" style="height: 200px; object-fit: cover;border-top-left-radius: .3rem;border-top-right-radius: .3rem;">
+                </div>
+                <div class="card-body">
+                  <a href="#" class="text-dark text-decoration-none">
+                    <h6>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h6>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <!-- End Video Section -->
           </div>
+        </div>
+        <div class="col-md-4">
+          <!-- Agenda Section -->
+          <div class="title mb-4">
+            <h4><i class="fa fa-calendar" aria-hidden="true"></i> Agenda Terbaru</h4>
+          </div>
+          
+          <div class="card mb-3 shadow-sm border-0">
+            <div class="card-body">
+              <h6>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h6>
+              <hr>
+              <div>
+                <i class="fa fa-map-marker"></i> Aula Sekolah
+              </div>
+              <div class="mt-2">
+                <i class="fa fa-calendar"></i> 20 Juli 2022
+              </div>
+            </div>
+          </div>
+
+          <div class="card mb-3 shadow-sm border-0">
+            <div class="card-body">
+              <h6>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h6>
+              <hr>
+              <div>
+                <i class="fa fa-map-marker"></i> Aula Sekolah
+              </div>
+              <div class="mt-2">
+                <i class="fa fa-calendar"></i> 20 Juli 2022
+              </div>
+            </div>
+          </div>
+
+          <div class="card mb-3 shadow-sm border-0">
+            <div class="card-body">
+              <h6>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h6>
+              <hr>
+              <div>
+                <i class="fa fa-map-marker"></i> Aula Sekolah
+              </div>
+              <div class="mt-2">
+                <i class="fa fa-calendar"></i> 20 Juli 2022
+              </div>
+            </div>
+          </div>
+          <!-- End Agenda Section -->
+
+          <!-- Kategori Section -->
+          <div class="title mb-4 mt-5">
+            <h4><i class="fa fa-folder" aria-hidden="true"></i> Kategori Berita</h4>
+          </div>
+
+          <div class="list-group">
+            <a href="#" class="list-group-item list-group-item-action border-0 shadow-sm mb-2 rounded"><i class="fa fa-folder-open" aria-hidden="true"></i> OSIS</a>
+            <a href="#" class="list-group-item list-group-item-action border-0 shadow-sm mb-2 rounded"><i class="fa fa-folder-open" aria-hidden="true"></i> Pramuka</a>
+            <a href="#" class="list-group-item list-group-item-action border-0 shadow-sm mb-2 rounded"><i class="fa fa-folder-open" aria-hidden="true"></i> Berita</a>
+            <a href="#" class="list-group-item list-group-item-action border-0 shadow-sm mb-2 rounded"><i class="fa fa-folder-open" aria-hidden="true"></i> Info</a>
+
+          </div>
+          <!-- End Kategori Section -->
         </div>
       </div>
     </div>
     <!-- End Main Section -->
+
+    <!-- Footer Section -->
+    <footer>
+      <div class="container-fluid" style="background: white;">
+        <div class="row p-4">
+            <div class="col-md-4">
+              <h5>Tentang</h5>
+              <hr>
+              <p>This example is a quick exercise to illustrate how the top-aligned navbar works. As you scroll, this navbar remains in its original position.</p>
+            </div>
+
+            <div class="col-md-4">
+              <h5>Tags</h5>
+              <hr>
+              <button class="btn btn-sm btn-outline-secondary mb-2">Islam</button>
+              <button class="btn btn-sm btn-outline-secondary mb-2">Budaya</button>
+              <button class="btn btn-sm btn-outline-secondary mb-2">Osis</button>
+              <button class="btn btn-sm btn-outline-secondary mb-2">Kegiatan</button>
+              <button class="btn btn-sm btn-outline-secondary mb-2">Kerja Bakti</button>
+              <button class="btn btn-sm btn-outline-secondary mb-2">Pengumuman</button>
+              <button class="btn btn-sm btn-outline-secondary mb-2">Info</button>
+              <button class="btn btn-sm btn-outline-secondary mb-2">Pramuka</button>
+            </div>
+
+            <div class="col-md-4">
+              <h5>Kontak</h5>
+              <hr>
+              <p>
+                <i class="fa fa-map-marker" aria-hidden="true"></i> This example is a quick exercise to illustrate how the top-aligned navbar works
+                <i class="fas fa-phone" aria-hidden="true"></i> +62857-8585-2224
+              </p>
+            </div>
+        </div>
+      </div>
+      <div class="container-fluid bg-dark">
+        <div class="row p-3">
+          <div class="text-center text-white font-weight-bold">
+            Copyright © 2023 SMK INDONESIA. All rights reserved.
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- End Footer Section -->
+
+    <!-- Script -->
+    <script src="assets/js/bootstrap.min.js"></script>
+    <!-- End Script -->
   </body>
 </html>
